add links-nav bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <title>Letuce Eat</title>
 </head>
 <body>
+    <div class="part1">
+        <img src="images/image3.png">
+        <p> MORINGA </p>
+        <nav>
+            <a href="#"> Home</a>
+            <a href="#"> About</a>
+            <a href="#"> Services</a>
+            <a href="#"> Contacts</a>
+            <a href="#"> MORINGA</a>
+
+
+
+
+        </nav>
+
+
+    </div>
     
 </body>
 </html>
