add text in the second  section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
     
         </div>
         <h1> Premium And Authentic <br> Traditional Food Restaurant <br> Welcome! </h1>
+        <p class="order"> Order Now </p>
 
+    </div>
+    <div class="part2">
+        <h2> Services </h2>
+        <p> Unique wood fired pizzas or be tempted by our pasta, antipaste, focacias, salads and Bruschetta dishes Relax in the friendly ambience as you enjoy enjoy the aromas</p>
     </div>
     
 </body>
