add final style for this section

--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="index.css">
     <title>Letuce Eat</title>
 </head>
@@ -63,15 +59,24 @@
     <div class="part3">
         <div class="column1">
             <img src="images/image1.png">
-
         </div>
-
         <div class="column2">
             <h1>Reviews</h1>
             <h2>ORGANIC FARM</h2>
             <p>We bring the season's best mix of organic produce and hand crafted farm products conviniently to your door by growing and partnering with local farms and artisans in your area.</p>
-            <h3></h3>
-        
+            <h3>- Loo Hudson </h3>
+        </div>
+    </div>
+    
+
+    <div class="part4">
+        <h2> Menu</h2> <br>
+        <p> Unique wood fired pizzas or be tempted by our pasta, antipaste, focacias, salads and Bruschetta dishes Relax in the friendly ambience as you enjoy enjoy the aromas of the wood ovens or sit at fresco and soak up the Mildura sunshine.</p>
+        <div class="menu">
+             <div class="four"> 
+            <h4> Drink apple vinegar cider</h4>
+            <p>Food description that is followed after food title </p>
+        </div>
 
         </div>
     </div>
