--- a/index.html
+++ b/index.html
@@ -67,15 +67,37 @@
             <h3>- Loo Hudson </h3>
         </div>
     </div>
-    
 
     <div class="part4">
         <h2> Menu</h2> <br>
         <p> Unique wood fired pizzas or be tempted by our pasta, antipaste, focacias, salads and Bruschetta dishes Relax in the friendly ambience as you enjoy enjoy the aromas of the wood ovens or sit at fresco and soak up the Mildura sunshine.</p>
         <div class="menu">
              <div class="four"> 
-            <h4> Drink apple vinegar cider</h4>
-            <p>Food description that is followed after food title </p>
+                 <img src="images/image4.png">
+            <h4> Chapati</h4>
+            <p>Tomato sauce,mozzarella and oregalo </p>
+            <h5> Ksh 200</h5>
+            <a href="#"><button>ORDER</button></a>
+        </div>
+        <div class="five"> 
+            <img src="images/iamge5.png">
+            <h4> Beef Stew</h4>
+            <p>Tomato sauce,mozzarella and oregalo </p>
+            <h5> Ksh 200</h5>
+            <a href="#"><button>ORDER</button></a>
+        </div>
+        <div class="six"> 
+            <img src="images/">
+            <h4> Chicken Stew</h4>
+            <p>Tomato sauce,mozzarella and oregalo </p>
+            <h5> Ksh 200</h5>
+            <a href="#"><button>ORDER</button></a>
+        </div>
+        <div class="seven"> 
+            <h4>Plain Rice</h4>
+            <p>Tomato sauce,mozzarella and oregalo </p>
+            <h5> Ksh 200</h5>
+            <a href="#"><button>ORDER</button></a>
         </div>
 
         </div>
