--- a/index.html
+++ b/index.html
@@ -87,13 +87,14 @@
             <a href="#"><button>ORDER</button></a>
         </div>
         <div class="six"> 
-            <img src="images/">
+            <img src="images/image6.png">
             <h4> Chicken Stew</h4>
             <p>Tomato sauce,mozzarella and oregalo </p>
             <h5> Ksh 200</h5>
             <a href="#"><button>ORDER</button></a>
         </div>
         <div class="seven"> 
+            <img src="images/image7.png">
             <h4>Plain Rice</h4>
             <p>Tomato sauce,mozzarella and oregalo </p>
             <h5> Ksh 200</h5>
@@ -103,6 +104,10 @@
         </div>
     </div>
     
+    <div class="part5">
+        <img src="">
+
+    </div>
 </body>
 </html>
 
